--- a/Hovos/Views/SingleViews/CustomCells/ContinentCell.xib
+++ b/Hovos/Views/SingleViews/CustomCells/ContinentCell.xib
@@ -19,7 +19,7 @@
             <rect key="frame" x="0.0" y="0.0" width="417" height="78"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26a-uK-usj">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26a-uK-usj">
                     <rect key="frame" x="5" y="10" width="42.5" height="24"/>
                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="18"/>
                     <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -39,6 +39,7 @@
                 <constraint firstItem="26a-uK-usj" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="8kr-tc-jM3"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="26a-uK-usj" secondAttribute="bottom" constant="10" id="N6A-R3-HVL"/>
                 <constraint firstItem="26a-uK-usj" firstAttribute="centerY" secondItem="dc6-fM-FJo" secondAttribute="centerY" id="Sm4-Ra-oIL"/>
+                <constraint firstItem="dc6-fM-FJo" firstAttribute="leading" secondItem="26a-uK-usj" secondAttribute="trailing" constant="20" id="jtc-If-Q1D"/>
                 <constraint firstItem="26a-uK-usj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="sJD-kp-ksn"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
