--- a/Hovos/Views/SingleViews/SeachViews/CustomEditViews.xib
+++ b/Hovos/Views/SingleViews/SeachViews/CustomEditViews.xib
@@ -24,8 +24,8 @@
             <rect key="frame" x="0.0" y="0.0" width="271" height="67"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter keyword..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Wh-PF-Hwd">
-                    <rect key="frame" x="10" y="2" width="221" height="63"/>
+                <textField opaque="NO" tag="111" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter keyword..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Wh-PF-Hwd">
+                    <rect key="frame" x="10" y="2" width="211" height="63"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="18"/>
                     <textInputTraits key="textInputTraits"/>
@@ -34,7 +34,7 @@
                     </connections>
                 </textField>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6Us-c1-Gee">
-                    <rect key="frame" x="241" y="23.5" width="20" height="20"/>
+                    <rect key="frame" x="231" y="23.5" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="14Y-8F-Ds1"/>
                         <constraint firstAttribute="width" constant="20" id="fXI-ts-LRa"/>
@@ -46,7 +46,7 @@
                 <constraint firstItem="8Wh-PF-Hwd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="2" id="K3N-R3-hOh"/>
                 <constraint firstItem="6Us-c1-Gee" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ObG-jU-edo"/>
                 <constraint firstAttribute="bottom" secondItem="8Wh-PF-Hwd" secondAttribute="bottom" constant="2" id="Oy1-jp-ohL"/>
-                <constraint firstAttribute="trailing" secondItem="6Us-c1-Gee" secondAttribute="trailing" constant="10" id="P6J-Zx-R0K"/>
+                <constraint firstAttribute="trailing" secondItem="6Us-c1-Gee" secondAttribute="trailing" constant="20" id="P6J-Zx-R0K"/>
                 <constraint firstItem="8Wh-PF-Hwd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="PLm-Ll-hah"/>
                 <constraint firstItem="6Us-c1-Gee" firstAttribute="leading" secondItem="8Wh-PF-Hwd" secondAttribute="trailing" constant="10" id="VaR-Mf-Eyz"/>
             </constraints>
