--- a/Hovos/Views/SingleViews/SeachViews/JobsCell.xib
+++ b/Hovos/Views/SingleViews/SeachViews/JobsCell.xib
@@ -23,11 +23,15 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iFJ-gs-EBP">
-                        <rect key="frame" x="5" y="5" width="309" height="104"/>
-                        <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="10" y="7.5" width="299" height="99"/>
+                        <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <state key="normal">
                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                        <state key="selected">
+                            <color key="titleColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="corners">
@@ -43,10 +47,10 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="iFJ-gs-EBP" secondAttribute="bottom" constant="5" id="RAN-66-wWv"/>
-                    <constraint firstAttribute="trailing" secondItem="iFJ-gs-EBP" secondAttribute="trailing" constant="5" id="bJ6-gc-Pry"/>
-                    <constraint firstItem="iFJ-gs-EBP" firstAttribute="top" secondItem="SaF-ze-Nog" secondAttribute="top" constant="5" id="yzV-u5-wFc"/>
-                    <constraint firstItem="iFJ-gs-EBP" firstAttribute="leading" secondItem="SaF-ze-Nog" secondAttribute="leading" constant="5" id="zR0-lR-wXc"/>
+                    <constraint firstAttribute="bottom" secondItem="iFJ-gs-EBP" secondAttribute="bottom" constant="7.5" id="RAN-66-wWv"/>
+                    <constraint firstAttribute="trailing" secondItem="iFJ-gs-EBP" secondAttribute="trailing" constant="10" id="bJ6-gc-Pry"/>
+                    <constraint firstItem="iFJ-gs-EBP" firstAttribute="top" secondItem="SaF-ze-Nog" secondAttribute="top" constant="7.5" id="yzV-u5-wFc"/>
+                    <constraint firstItem="iFJ-gs-EBP" firstAttribute="leading" secondItem="SaF-ze-Nog" secondAttribute="leading" constant="10" id="zR0-lR-wXc"/>
                 </constraints>
             </collectionViewCellContentView>
             <size key="customSize" width="319" height="114"/>
