search work updated

--- a/Hovos/Views/SingleViews/SeachViews/CalenderVC.xib
+++ b/Hovos/Views/SingleViews/SeachViews/CalenderVC.xib
@@ -112,7 +112,7 @@
                                 <action selector="selectDateAction:" destination="-1" eventType="touchUpInside" id="0TW-wk-QLc"/>
                             </connections>
                         </button>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bdf-0j-yUI">
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bdf-0j-yUI">
                             <rect key="frame" x="10" y="120" width="353" height="616"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         </tableView>
