--- a/Hovos/Views/SingleViews/SeachViews/HostSearchVC.xib
+++ b/Hovos/Views/SingleViews/SeachViews/HostSearchVC.xib
@@ -16,13 +16,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HostSearchVC" customModule="Hovos" customModuleProvider="target">
             <connections>
+                <outlet property="anytime" destination="Pcj-QY-53K" id="IZc-7U-E9X"/>
                 <outlet property="clearButton" destination="0tP-zh-Ddk" id="kcG-ti-JUe"/>
                 <outlet property="collView" destination="j0Q-fJ-PkX" id="YmH-04-RTa"/>
                 <outlet property="continentView" destination="OEX-iE-eYq" id="b27-3F-7Ue"/>
                 <outlet property="countries" destination="cci-p1-HVM" id="7c7-Fs-9ZJ"/>
                 <outlet property="countriesView" destination="JZq-Ma-WnJ" id="DdT-K0-cIo"/>
+                <outlet property="dateRange" destination="nfo-PV-DMI" id="bHa-PF-Jc5"/>
+                <outlet property="fromLabel" destination="YrS-yF-zF3" id="dJE-N0-2Zc"/>
                 <outlet property="heightConstraint" destination="aNg-eS-sLD" id="GEA-Mg-5nF"/>
                 <outlet property="searchTextView" destination="xGc-aR-suB" id="ZEX-nW-3iC"/>
+                <outlet property="toLabel" destination="Jgm-nl-jzk" id="CKY-hz-D2E"/>
                 <outlet property="view" destination="iN0-l3-epB" id="Tgk-fB-9o4"/>
             </connections>
         </placeholder>
@@ -46,7 +50,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hosts: refine search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dDo-VT-fa5">
-                            <rect key="frame" x="65" y="24.5" width="160.5" height="21"/>
+                            <rect key="frame" x="65" y="24" width="156" height="22"/>
                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="18"/>
                             <color key="textColor" red="0.98039215690000003" green="0.96078431369999995" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -98,7 +102,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TxJ-Bh-bIt">
-                                    <rect key="frame" x="15" y="85" width="77.5" height="24"/>
+                                    <rect key="frame" x="15" y="85" width="75.5" height="24"/>
                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="20"/>
                                     <color key="textColor" name="orangeColor"/>
                                     <nil key="highlightedColor"/>
@@ -148,7 +152,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Help exchange dates" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d8u-GZ-s0g">
-                                    <rect key="frame" x="15" y="254" width="189.5" height="24"/>
+                                    <rect key="frame" x="15" y="254" width="182" height="24"/>
                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="20"/>
                                     <color key="textColor" name="orangeColor"/>
                                     <nil key="highlightedColor"/>
@@ -163,8 +167,11 @@
                                     <state key="selected" title="Only with in these dates" image="selectedTick">
                                         <color key="titleColor" name="orangeColor"/>
                                     </state>
+                                    <connections>
+                                        <action selector="showCalender:" destination="-1" eventType="touchUpInside" id="Gua-SO-0HA"/>
+                                    </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pcj-QY-53K">
+                                <button opaque="NO" contentMode="scaleAspectFit" selected="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pcj-QY-53K">
                                     <rect key="frame" x="20" y="283" width="390" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="ZT3-DW-rTo"/>
@@ -177,18 +184,21 @@
                                     <state key="selected" title="Any time" image="selectedTick">
                                         <color key="titleColor" name="orangeColor"/>
                                     </state>
+                                    <connections>
+                                        <action selector="anyTimeClicked:" destination="-1" eventType="touchUpInside" id="rra-sL-6Zm"/>
+                                    </connections>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gl9-Vj-whN">
                                     <rect key="frame" x="15" y="368" width="395" height="40"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YrS-yF-zF3">
-                                            <rect key="frame" x="15" y="10.5" width="71" height="19"/>
+                                            <rect key="frame" x="15" y="10.5" width="69" height="19"/>
                                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jgm-nl-jzk">
-                                            <rect key="frame" x="212.5" y="10.5" width="64.5" height="19"/>
+                                            <rect key="frame" x="212.5" y="10.5" width="62" height="19"/>
                                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
@@ -231,6 +241,9 @@
                                                     <real key="value" value="1"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="showCalender:" destination="-1" eventType="touchUpInside" id="sOB-Lx-1ic"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -327,6 +340,9 @@
                             <state key="normal" title="SEARCH">
                                 <color key="titleColor" red="0.98039215690000003" green="0.96078431369999995" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
+                            <connections>
+                                <action selector="searchClicked:" destination="-1" eventType="touchUpInside" id="nSp-rV-7GH"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZMV-05-YGz">
                             <rect key="frame" x="227.5" y="5" width="177.5" height="40"/>
