--- a/Hovos/Views/SingleViews/CustomCells/MenuCell.xib
+++ b/Hovos/Views/SingleViews/CustomCells/MenuCell.xib
@@ -6,6 +6,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="lato_regular.ttf">
+            <string>Lato-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -17,8 +22,8 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m28-Ti-ZV3">
-                        <rect key="frame" x="20" y="10" width="394" height="24"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <rect key="frame" x="20" y="15" width="394" height="14"/>
+                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="18"/>
                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -26,8 +31,8 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="m28-Ti-ZV3" firstAttribute="leading" secondItem="12g-VK-SP1" secondAttribute="leading" constant="20" id="1vW-J8-SzD"/>
-                    <constraint firstAttribute="bottom" secondItem="m28-Ti-ZV3" secondAttribute="bottom" constant="10" id="29B-hk-F4y"/>
-                    <constraint firstItem="m28-Ti-ZV3" firstAttribute="top" secondItem="12g-VK-SP1" secondAttribute="top" constant="10" id="CxL-Xi-0xb"/>
+                    <constraint firstAttribute="bottom" secondItem="m28-Ti-ZV3" secondAttribute="bottom" constant="15" id="29B-hk-F4y"/>
+                    <constraint firstItem="m28-Ti-ZV3" firstAttribute="top" secondItem="12g-VK-SP1" secondAttribute="top" constant="15" id="CxL-Xi-0xb"/>
                     <constraint firstAttribute="trailing" secondItem="m28-Ti-ZV3" secondAttribute="trailing" id="bSm-Xe-JCf"/>
                 </constraints>
             </tableViewCellContentView>
